# symbiosis

./: .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/skills/backend-api/: SKILL.md
.claude/skills/backend-migrations/: SKILL.md
.claude/skills/backend-models/: SKILL.md
.claude/skills/backend-queries/: SKILL.md
.claude/skills/frontend-accessibility/: SKILL.md
.claude/skills/frontend-components/: SKILL.md
.claude/skills/frontend-css/: SKILL.md
.claude/skills/frontend-responsive/: SKILL.md
.claude/skills/global-coding-style/: SKILL.md
.claude/skills/global-commenting/: SKILL.md
.claude/skills/global-conventions/: SKILL.md
.claude/skills/global-error-handling/: SKILL.md
.claude/skills/global-tech-stack/: SKILL.md
.claude/skills/global-validation/: SKILL.md
.claude/skills/testing-test-writing/: SKILL.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/standards/global/: tech-stack.md
alembic/: env.py
docs/architecture/: 08-crosscutting-concepts.md  README.md
docs/architecture/decisions/: 001-use-adrs.md  002-build-own-ai-gateway.md  003-use-python.md  004-use-agent-os.md
docs/product/: 01-purpose-and-background.md  02-business-context.md  03-approach-and-objectives.md  04-customer-personas.md  05-functional-requirements.md  06-non-functional-requirements.md  07-long-term-vision.md  08-decisions.md  README.md
scripts/: generate_changelog.py
src/symbiosis/: __init__.py  cli.py  database.py
src/symbiosis/auth/: __init__.py  validation.py
src/symbiosis/catalog/: __init__.py
src/symbiosis/filters/: __init__.py
src/symbiosis/projects/: __init__.py
src/symbiosis/providers/: __init__.py
src/symbiosis/server/: __init__.py
tests/: conftest.py  test_auth.py
