[project]
name = "sybmiosis-gateway"
dynamic = ["version"]
description = "An open-source AI gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/symbiosis"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"